# yawbcc

./: .gitignore  2ème_notebook_bonne version_JL_(Implémenter_et_entrainer_un_premier_Réseau_de_Neurones_Convolutif_LeNet5).ipynb  Project yawbcc (1ère partie = EDA).ipynb  Project yawbcc (2ème_partie = Implémenter_et_entrainer_un_premier_Réseau_de_Neurones_Convolutif_LeNet5).ipynb  README.md  damien_2eme_notebook_README.md  damien_2eme_notebook_datasets.py  damien_2eme_notebook_images.py  damien_2eme_notebook_pyproject.toml  damien_2eme_notebook_requirements.txt  pyproject.toml
docs/: conf.py  index.rst  modules.rst  yawbcc.rst
notebooks/: 00-GettingStarted.ipynb  AT_02_LeNet.ipynb  AT_03_TransferLearning_MobileNetV2_AT.ipynb  AT_04_Final_Notebook_BCC.ipynb  DC02-UMAP.ipynb  DC03-LeNet.ipynb  DC04-TransferLearning.ipynb  DC05-DimensionReduction.ipynb  DC06-Segmentation.ipynb  DC07-UNet.ipynb  DC08-Modelisation.ipynb  DC09-Demo.ipynb  umap.csv
scripts/: class_index.csv  convert_munich_dataset.py  create_barcelona_remapped.py  train_wbc_lenet.py  train_wbc_mobilenetv2.py  train_wbc_resnet50v2.py  train_wbc_vgg16.py  train_wbc_xception.py
streamlit/: README.md  app.py  demodf.csv  predictions.csv
streamlit/css/: styles.css
streamlit/pages/: 04_Application.py  05_credits.py
streamlit_yawbcc/: streamlit.py
yawbcc/: datasets.py  demo.py  images.py  models.py
yawbcc_streamlit/: README.md  predictions.csv  requirements.txt  streamlit.py
yawbcc_streamlit/css/: styles.css
yawbcc_streamlit/pages/: 01_DataViz.py  02_Preprocessing.py  03_Modelisation.py  04_Application.py  05_credits.py
