[tool.poetry]
name = "yawbcc"
version = "0.1.0"
description = "Yet Another White Blood Cells Classifier"
authors = [
    "Anastasiya Trushko <anastasia.trushko@gmail.com>",
    "Damien Corral <damien.corral@gmail.com>",
    "Jérémy Lavergne <jeremy.lav2009@gmail.com>",
    "Jordan Porcu <jordan.porcu@gmail.com>"
]
license = "LGPL-3.0-or-later"
readme = "README.md"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinxcontrib-napoleon"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
Sphinx = { version = "4.2.0", optional = true }
sphinx-rtd-theme = { version = "1.0.0", optional = true }
sphinxcontrib-napoleon = { version = "0.7", optional = true }
pandas = "^1.5.0"
matplotlib = "^3.6.1"
keras = "^2.10.0"
tensorflow = "^2.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
