[tool.poetry]
name = "yawbcc"
version = "0.1.0"
description = "Yet Another White Blood Cells Classifier"
authors = [
    "Anastasiya Trushko <anastasia.trushko@gmail.com>",
    "Damien Corral <damien.corral@gmail.com>",
    "Jérémy Lavergne <jeremy.lav2009@gmail.com>",
    "Jordan Porcu <jordan.porcu@gmail.com>"
]
license = "LGPL-3.0-or-later"
readme = "README.md"

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme", "sphinxcontrib-napoleon"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^1.5.0"
matplotlib = "^3.6.1"
tensorflow = "^2.10.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.5.0"
notebook = "^6.5.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^5.3.0"
sphinx-rtd-theme = "^1.0.0"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
